--- a/templates/results.html
+++ b/templates/results.html
@@ -13,7 +13,7 @@
       .container {
         max-width: 800px;
         margin: 0 auto;
-        padding: 20px;
+        padding: 10px;
       }
 
       h1 {
@@ -26,21 +26,24 @@
         list-style: none;
         padding: 0;
         margin: 0;
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
       }
 
       .film-list li {
-        background-color: #a7a9b3;
+        background-color: #9da8db;
         border-radius: 10px;
         box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.3);
         padding: 20px;
-        margin-bottom: 20px;
+        margin: 1rem;
         display: flex;
         align-items: center;
         transition: background-color 0.3s ease;
       }
 
       .film-list li:hover {
-        background-color: #cdcdd3;
+        background-color: #dcdced;
       }
 
       .film-list li img {
@@ -56,7 +59,7 @@
       }
 
       .film-label {
-        font-size: 24px;
+        font-size: 20px;
         font-weight: 300;
         margin-bottom: 10px;
       }
